--- a/Trying_Characters.css
+++ b/Trying_Characters.css
@@ -1,4 +1,4 @@
-/*CSS- Exercise edX*/
+/*CSS-Putting into practice theory from edX course*/
 body, html {
   font-family: Arial, Helvetica, sans-serif;
 }
