--- a/Aligment- CSS/estilo.css
+++ b/Aligment- CSS/estilo.css
@@ -63,7 +63,7 @@ footer {
   background-color: #4EC5C1;
   border-top: 5px #FEDC3D solid;
   color: white;
-  margin: 30px 0 0 0 ;
+  margin-top: 30px;
   padding: 10px;
   text-align: center;
 }
